# openshell-shared

./: LICENSE  NOTICE  README.md  __init__.py  client.py  pyproject.toml  server.py  test.py
api/manager/v1/: __init__.py  authentication.py  domains.py  identity.py  tunnels.py
cryptography/: keys.py
identity/: identification.py
modules/shell/: protocol.py
openshell_shared/: __init__.py
openshell_shared/api/: __init__.py  context.py
openshell_shared/api/manager/v1/: client.py  entities.py  exceptions.py  models.py  passports.py  sessions.py  transport.py
openshell_shared/certificates/: __init__.py  base.py  domain.py  manager.py
openshell_shared/communication/: __init__.py  connections.py  flow.py  manager.py  models.py  router.py  tunnels.py
openshell_shared/communication/transport/: base.py  models.py  ws.py
openshell_shared/cryptography/: certificate.py  identity.py  signatures.py
openshell_shared/domain/: __init__.py  domain.py  membership.py  permissions.py  policies.py
openshell_shared/identity/: __init__.py  authentication.py  credential.py  entity.py  identity.py  store.py
openshell_shared/modules/: utils.py
openshell_shared/modules/shell/: client.py  models.py  server.py  session.py
openshell_shared/protocols/negotiation/: challenge.py
openshell_shared/standards/certificates/: status.py
openshell_shared/standards/entities/: types.py
openshell_shared/standards/events/: types.py
openshell_shared/standards/passports/: models.py  types.py
openshell_shared/standards/permissions/: types.py
openshell_shared/standards/roles/: types.py
protocols/negotiation/: models.py
scripts/: publish  upgrade
standards/certificates/: types.py
standards/events/schemas/: entity_registered.py
standards/transports/: types.py
